<resources>
	<string name="app_id">ru.sonic.zabbix.pro</string>
	<string name="app_name">AndZabbix Pro</string>
	<string name="banner_ad_unit_id">XXXX</string>
	<string name="configure_intro">Images Widget Configuration</string>
	<string name="configure_update">Update Time</string>
	<string name="udpate_rate_hint">Value in seconds</string>
	<string name="save_config">Save</string>
	<string name="contentMenu">Menu</string>
	<string name="name">Name</string>
	<string name="status">Status</string>
	<string name="esc_period">Esc period</string>
	<string name="def_shortdata">Def shortdata</string>
	<string name="def_longdata">Def longdata</string>
	<string name="evaltype">Evaltype</string>
	<string name="eventsource">Eventsource</string>
	<string name="refresh">Refresh</string>
	<string name="select_server">Select Server</string>
	<string name="sorting_by">Sorting by</string>
	<string name="order_by_asc">Order by ASC</string>
	<string name="order_by_desc">Order by DESC</string>
	<string name="reset_all">Reset all</string>
	<string name="filter_by">Filter by</string>
	<string name="dns">DNS</string>
	<string name="ip">IP</string>
	<string name="port">Port</string>
	<string name="availability">Availability</string>
	<string name="use_ipmi">Use IPMI</string>
	<string name="use_snmp">Use SNMP</string>
	<string name="maintenced">Maintenance</string>
	<string name="show_hosts_only">Show hosts only</string>
	<string name="with_items">with items</string>
	<string name="with_monitored_items">with monitored items</string>
	<string name="with_historical_items">with historical items</string>
	<string name="with_triggers">with triggers</string>
	<string name="with_monitored_triggers">with monitored triggers</string>
	<string name="with_http_tests">with http tests</string>
	<string name="with_monitored_http_tests">with monitored http tests</string>
	<string name="with_graphs">with graphs</string>
	<string name="proxyes">proxies</string>
	<string name="groups_added">Groups added</string>
	<string name="groups_available">Groups available</string>
	<string name="templated_added">Template added</string>
	<string name="templates_available">Templates available</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="host_name">Host name</string>
	<string name="visible_name">Visible name</string>
	<string name="monitored">Monitored</string>
	<string name="add_interface">Add interface</string>
	<string name="host_interfaces">Host interfaces</string>
	<string name="host_alias">Host alias</string>
	<string name="disable_until">Disable until</string>
	<string name="error">Error</string>
	<string name="edit">Edit</string>
	<string name="errors_from">Errors from</string>
	<string name="last_access">Last access</string>
	<string name="snmp_available">SNMP available</string>
	<string name="snmp_error">SNMP Error</string>
	<string name="ipmi_available">IPMI available</string>
	<string name="ipmi_error">IPMI Error</string>
	<string name="jmx_available">JMX available</string>
	<string name="jmx_error">JMX Error</string>
	<string name="maintenance_status">Maintenance status</string>
	<string name="triggers_interface">triggers Interface</string>
	<string name="modern_colors">Modern colors</string>
	<string name="modern_colors_summary">Use modern colors for trigger severity</string>
	<string name="hide_acknowledge">Hide acknowledge</string>
	<string name="hide_acknowledge_summary">Hide acknowledge box</string>
	<string name="hide_age">Hide trigger age</string>
	<string name="hide_age_summary">Hide age</string>
	<string name="updates">Updates</string>
	<string name="updates_title">Automatic check for updates</string>
	<string name="updates_summary">Automatic check for updates</string>
	<string name="fixes">Fixes</string>
	<string name="fix_summary">Fix for support old zabbix server (1.8.2 and lower)
	</string>
	<string name="fix_title">Old zabbix server</string>
	<string name="auto_refresh">Auto refresh</string>
	<string name="auto_refresh_sumary">Use auto refresh active triggers list</string>
	<string name="auto_refresh_period">Auto refresh period (sec)</string>
	<string name="time_zone_correction">Time zone correction</string>
	<string name="time_zone_correction_summary">Use time zone correction</string>
	<string name="command">Command</string>
	<string name="type">Type</string>
	<string name="description">Description</string>
	<string name="host_access">Host access</string>
	<string name="user_group">User group</string>
	<string name="execute_on">Execute on</string>
	<string name="server_name">ServerName</string>
	<string name="server_url">URL to ZabbixApi JSON RPC page</string>
	<string name="user">User</string>
	<string name="password">Password</string>
	<string name="connection_timeout">Connection TimeOut</string>
	<string name="use_base_autentification">Use base authentication</string>
	<string name="base_auth_user">Base auth user</string>
	<string name="base_auth_password">Base auth password</string>
	<string name="priority">Priority</string>
	<string name="age">Age</string>
	<string name="ack">Ack</string>
	<string name="running">Running</string>
	<string name="comments">Comments</string>
	<string name="media">Media</string>
	<string name="user_alias">User alias</string>
	<string name="user_name">User name</string>
	<string name="user_groups">User groups</string>
	<string name="user_surname">User surname</string>
	<string name="language">Language</string>
	<string name="refresh_period">Refresh period</string>
	<string name="auto_login">Auto login</string>
	<string name="auto_login_time">Auto login time</string>
	<string name="auto_logout">Auto logout</string>
	<string name="url">Url</string>
	<string name="group_name">Group name</string>
	<string name="gui">Gui</string>
	<string name="debug">Debug</string>
	<string name="api_access">Api access</string>
	<string name="server">Server</string>
	<string name="update_interval">Update interval</string>
	<string name="ok">OK</string>
	<string name="nop"> </string>
	<string name="create">Create</string>
	<string name="delete_interface">Delete interface</string>
	<string name="edit_interface">Edit interface</string>
	<string name="create_interface">Create interface</string>
	<string name="not_allow">Not allow</string>
	<string name="interface_limit_err_string">Cannot add more 1 interface</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="copy_host">Copy host</string>
	<string name="no_host_groups">No groups for host.\nPlease add group on a second page</string>
	<string name="wrong_interface_params">Wrong interface params</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="delete_media">Delete media</string>
	<string name="delete">Delete</string>
	<string name="add_media">Add media</string>
	<string name="more_info">More info</string>
	<string name="disable_group">Disable group</string>
	<string name="enable_group">Enable group</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="activate">Activate</string>
	<string name="disable_debug_mode">Disable debug mode</string>
	<string name="enable_debug_mode">Enable debug mode</string>
	<string name="disable_gui_access">Disable GUI access</string>
	<string name="enable_gui_access">Enable GUI access</string>
	<string name="disable_api">Disable API</string>
	<string name="enable_api">Enable API</string>
	<string name="create_user_group">Create user group</string>
	<string name="usergroup_information">Usergroup information</string>
	<string name="select_zabbix_server">Select Zabbix server</string>
	<string name="not_selected">Not selected</string>
	<string name="check_internet_connection">Check internet connection</string>
	<string name="active_triggers">Active triggers</string>
	<string name="overview">Overview</string>
	<string name="graphs_list">Graphs list</string>
	<string name="host_groups">Host groups</string>
	<string name="maps_list">Maps List</string>
	<string name="screens_list">Screens List</string>
	<string name="configuration">Configuration</string>
	<string name="zabbix_control">Zabbix Control</string>
	<string name="add_server">Add server</string>
	<string name="trigger_options">trigger options</string>
	<string name="show_events">Show events</string>
	<string name="trigger_information">trigger information</string>
	<string name="host_info">Host Info</string>
	<string name="show_items">Show Items</string>
	<string name="show_graphs">Show Graphs</string>
	<string name="host_information">Host information</string>
	<string name="filters_and_sorting">Filters and sorting</string>
	<string name="alias">Alias</string>
	<string name="surname">Surname</string>
	<string name="user_type">User type</string>
	<string name="graph">Graph</string>
	<string name="language_summary">Change interface language</string>
	<string name="host">Host</string>
	<string name="alerts">Alerts</string>
	<string name="enable_sound_alert">Enable sound alert</string>
	<string name="sound_alert">Sound alert</string>
	<string name="enable_led_indicator">Enable LED indicator</string>
	<string name="alert_led_indicator">LED indicator alert</string>
	<string name="service_update_interval">Service update interval</string>
	<string name="enable_vibration_alert">Enable vibration alert</string>
	<string name="vibration_alert">Vibration alert</string>
	<string name="updating_config">Updating config</string>
	<string name="run">Run</string>
	<string name="enable_service">Enable service</string>
	<string name="background_checks">Background checks</string>
	<string name="acknowledge_config">Acknowledge config</string>
	<string name="show_only_unacknowledged_triggers">Show only unacknowledged triggers</string>
	<string name="hide_acknowledged">Hide acknowledged</string>
	<string name="custom_check_config">Custom check config</string>
	<string name="type_of_trigger_checks">Type of trigger checks</string>
	<string name="triggers_check_type">triggers check type</string>
	<string name="show_active_triggers_for_time">Show active triggers for time:</string>
	<string name="time_actime">Time actime (m)</string>
	<string name="custom_time_period_expanded">Custom time period for check active triggers. Show
		active triggers fo last: (m)</string>
	<string name="custom_time_period">Custom time period</string>
	<string name="triggers_filter">triggers filter</string>
	<string name="sort_triggers_by_status">Sort triggers by status</string>
	<string name="sort_triggers">Sort triggers</string>
	<string name="hide_dependences">Hide dependence</string>
	<string name="hide_dependences_expanded">Do not select dependent triggers in PROBLEM state
	</string>
	<string name="maintence">Maintenance</string>
	<string name="maintence_summary">If checked return only enabled triggers that not belong to hosts in maintenance</string>
	<string name="hide_maintence">Hide maintenance</string>
	<string name="severity">Severity</string>
	<string name="filter">Filter</string>
	<string name="buy">Buy</string>
	<string name="need_buy">You should buy widget before use</string>
	<string name="enable_custom_sound">Set custom melody for notifications and repeat it</string>
	<string name="custom_sound_alert">Custom alert melody</string>
	<string name="chose_custom_sound_alert">Please set your melody for notification</string>
	<string name="set_custom_sound_alert">Set alert melody</string>
	<string name="triggers_filter_severity">Show only triggers with severity greater or equal than the given severity</string>
	<string name="triggers_filter_severity_title">By severity</string>
	<string name="fix_internet_summary">Enable or disable check connectivity to internet</string>
	<string name="fix_internet_title">Internet checks</string>
	<string name="multiservers">Multiserver</string>
	<string name="multiserver_summary">Need restart app for activation</string>
	<string name="myltiserver_title">Enable multiserver</string>
</resources>