<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hostfilterll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/user_alias"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/user_surname"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/refresh_period"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_login"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/user_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ok_bb" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_autologintime_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_login_time"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_autologintime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_logout"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_autologout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_url_ll"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/user_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/user_groups"
            android:textSize="16dp" />

        <ListView
            android:id="@+id/user_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>